--- a/manifest.json
+++ b/manifest.json
@@ -13,9 +13,18 @@
      
     "permissions": [
     "activeTab",
-    "storage",
-    "extension"
-   ]
+    "storage"
+   ],
+    
+   "content_scripts": [
+        {
+            "matches": ["<all_urls>"],
+            "js": [
+                    "/external/jquery.js",
+                    "/content_script.js"
+                ]
+        }
+    ]
     
     
 }
