--- a/manifest.json
+++ b/manifest.json
@@ -21,7 +21,8 @@
             "matches": ["<all_urls>"],
             "js": [
                     "/external/jquery.js",
-                    "/content_script.js"
+                    "/content_script.js",
+                    "/firebase.js"
                 ]
         }
     ]
