set variables for parsing

--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,7 @@
     
    "content_scripts": [
         {
-            "matches": ["<all_urls>"],
+            "matches": ["https://www.zillow.com/*"],
             "js": [
                     "/external/jquery.js",
                     "/content_script.js"
